feat: Implement Compra and Confiteria services with repository integration